# okapi

./: Cargo.toml
okapi/: Cargo.toml
rocket-okapi/: Cargo.toml
rocket-okapi/src/: gen.rs
